--- a/cookbook/meal-prep/heroes/css/page8.css
+++ b/cookbook/meal-prep/heroes/css/page8.css
@@ -62,6 +62,7 @@ body {
     background-size: cover;
     background-position: center center;
     position: relative;
+    margin-bottom: 100px;
 }
 
 #hero-3 .hero-content {
