--- a/cookbook/recipes/hero-parallax/css/style.css
+++ b/cookbook/recipes/hero-parallax/css/style.css
@@ -15,19 +15,20 @@ body {
     background-attachment: fixed;
     display: flex;
     justify-content: flex-end;
+    margin-bottom: 100px;
 }
 
 #hero-5 .hero-content {
     text-align: right;
     color: rgb(2, 2, 2);
-    padding: 5vh 8vw;
+    padding: 60px 100px;
 }
 
 #hero-5 h2 {
-    font-size: 6vw;
-    margin-bottom: 3vh;
+    font-size: 120px;
+    margin-bottom: 60px;
 }
 
 #hero-5 h4 {
-    font-size: 3vw;
+    font-size: 48px;
 }
