--- a/css/agenda.css
+++ b/css/agenda.css
@@ -105,6 +105,10 @@ h1 + h3 {
     background-color: #091c2f;
 }
 
+#assignments .img-container.more-space.dark-blue-green {
+    background-color: #314555;
+}
+
 #assignments .img-container.more-space.dark-red {
     background-color: #871e2c;
 }
