background position and background size

--- a/cookbook/seasonings/css/background-size.css
+++ b/cookbook/seasonings/css/background-size.css
@@ -1,4 +1,4 @@
-/* background-image example code */
+/* background-size example code */
 #example1 {
     background-image: url("../images/axolotl.avif");
     background-size: cover;
