--- a/cookbook/meal-prep/media-queries-v4/css/page1.css
+++ b/cookbook/meal-prep/media-queries-v4/css/page1.css
@@ -32,9 +32,6 @@ body {
     we can either allow the Flexbox Items
     to wrap, or we can convert the Flexbox
     from a row to a column.
-
-    (try out both flex container properties 
-    below, but one at a time)
 */
 
 #nav {
@@ -42,9 +39,11 @@ body {
     display: flex;
     justify-content: center;
     /* 
-        Try out the properties below uncommented
-        one at a time, but just realize we'll
-        be removing them again shortly. 
+        DEMO NOTE: We're going to try out the 
+        commented properties below and uncomment 
+        them one at a time, but just realize 
+        we'll be removing (or commenting them out) 
+        again shortly after. 
 
         We'll start with flex-wrap.
     */
@@ -52,26 +51,45 @@ body {
     /* flex-wrap: wrap; */
 
     /*
-        Allowing the Flexbox Items to wrap
-        actually doesn't look that bad for
-        this example, but in other cases,
-        it won't look so nice, so let's take
-        a look at our other option: changing
-        the Flexbox direction from a row
-        to a column.
+        Try shrinking the screen and see how 
+        our nav behaves. Allowing the Flexbox 
+        Items to wrap actually doesn't look that 
+        bad, although depending on the screen
+        width, it can look a little unbalanced.  
+        
+        So let's comment out flex-wrap and take a 
+        look at our other option: changing the 
+        Flexbox direction from a row to a column.
     */
     
     /* flex-direction: column; */
 
     /*
-        That gets our content in a column...
-        but it doesn't look great left
-        aligned like that.
+        That gets our content in a column, which
+        definitely fits much better, even at very
+        small screen widths. However, it also
+        makes the nav MUCH taller, taking up a lot
+        more screen real estate, especially on a 
+        mobile device.
 
-        However, we'll deal with that later,
-        because there's a problem. Move down
-        and read the next comment below to
-        find out what that problem is.
+        So, regardless of the approach you take,
+        either wrapping or stacking in a column,
+        there's always going to be trade-offs,
+        and you'll have to evaluate which approach
+        works better for the content you're
+        working with.
+        
+        There's some other design issues we could
+        address (like the alignment), but there's a 
+        bigger problem: if we modify the CSS here, 
+        that affects the whole page at ALL widths. 
+        
+        Try it out: expand your screen width, and
+        you'll see that the nav is ALWAYS in a column.  
+        That looks even worse at wider page widths.
+
+        So, comment out flex-direction, and let's
+        see how we can address this bigger issue.
     */
 }
 
@@ -81,23 +99,3 @@ body {
     text-decoration: none;
     padding: 20px;
 }
-
-
-/*
-    Here's the problem: if we modify the CSS
-    Rule up above, that would affect the whole page
-    at ALL widths. Try it out: expand your page 
-    width, and you'll see that the nav is ALWAYS
-    in a column.  That looks even worse at wider
-    page widths.
-    
-    We really only want to change things when 
-    content in the nav starts looking bad (which
-    is somewhere around 450px and below).
-
-    How can we make that happen?
-
-    With Media Queries! Now we finally get to
-    see why media queries are so useful (and
-    essential) to modern, responsive web design.
-*/
