--- a/cookbook/meal-prep/media-queries-v4/css/page2.css
+++ b/cookbook/meal-prep/media-queries-v4/css/page2.css
@@ -61,7 +61,7 @@ body {
         complete CSS Rules inside of the Media
         Query curly braces.
 
-        Before we start fixing our nav, we're
+        But before we start fixing our nav, we're
         instead going to start out with a little
         trick that will help us tell more visually 
         when we're "inside" the conditions of
