--- a/cookbook/meal-prep/colors-and-text/css/page1.css
+++ b/cookbook/meal-prep/colors-and-text/css/page1.css
@@ -1,4 +1,22 @@
 /*
+    NOTE: Chances are, you've already linked 
+    your CSS and HTML in the code-skeleton 
+    folder, assuming you followed the updated
+    Web Dev Setup tutorial.
+
+    If so, you can skip the instructions on
+    this page, since you've already done this
+    step.
+
+    However, we will still leave this page here,
+    in case some students do NOT have them 
+    connected, and because it still has useful
+    information about the different approaches
+    that can be used to include CSS on a web
+    page.
+*/
+
+/*
     Next we're going to write some CSS...
     or at least, we'd like to, but first
     we need to create a separate file
