--- a/cookbook/recipes/hero-parallax/css/style.css
+++ b/cookbook/recipes/hero-parallax/css/style.css
@@ -13,15 +13,15 @@ body {
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
-    display: flex;
-    justify-content: flex-end;
+    position: relative;
     margin-bottom: 100px;
 }
 
 #hero-5 .hero-content {
     text-align: right;
-    color: rgb(2, 2, 2);
-    padding: 60px 100px;
+    position: absolute;
+    top: 5%;
+    right: 10%;
 }
 
 #hero-5 h2 {
@@ -31,4 +31,17 @@ body {
 
 #hero-5 h4 {
     font-size: 48px;
+}
+
+/* filler section, unrelated to the hero styling */
+#main {
+    height: 100vh;
+}
+
+h1 {
+    font-size: 36px;
+}
+
+p {
+    font-size: 20px;
 }
