--- a/cookbook/recipes/hero-right-flex-column/css/style.css
+++ b/cookbook/recipes/hero-right-flex-column/css/style.css
@@ -16,26 +16,49 @@ body {
     flex-direction: column; 
     justify-content: center; 
     align-items: flex-end;
-    padding-right: 60px;
+    position: relative;
     margin-bottom: 100px;
 }
 
+/* 
+    Remember, this approach is a bit tedious,
+    since you have to manually position each
+    individual HTML element.
+
+    Unless you really NEED to position each
+    HTML element in different parts of the hero,
+    it is generally much easier to use a
+    hero-content container to group the hero
+    content together, and then move them as
+    a group with the position properties.
+
+    Check out the other Coding Cookbook 
+    recipe pages for hero layouts for 
+    examples of this!
+*/
+
 #hero-2 h2 {
-    font-size: 120px;
-    margin-bottom: 36px;
+    font-size: 72px;
+    position: absolute;
+    right: 20%;
+    bottom: 50%;
 }
 
 #hero-2 h4 {
-    font-size: 48px;
-    margin: 0px;
+    font-size: 24px;
+    position: absolute;
+    right: 20%;
+    bottom: 47%;
 }
 
 #hero-2 a {
-    font-size: 28px;
+    font-size: 14px;
     display: inline-block;
     background-color: #333333;
     color: white;
     text-decoration: none;
     padding: 24px;
-    margin-top: 36px;
+    position: absolute;
+    right: 20%;
+    bottom: 41%;
 }
