--- a/css/agenda.css
+++ b/css/agenda.css
@@ -181,6 +181,10 @@ a {
     color: rgb(230, 91, 91);
 }
 
+.indent {
+    margin-left: 24px;
+}
+
 @media screen and (max-width: 1100px) {
     
     #flex-container {
