--- a/css/agenda.css
+++ b/css/agenda.css
@@ -151,6 +151,15 @@ h1 + h3 {
     margin: 0px;
 }
 
+#agenda {
+    display: flex;
+    flex-direction: column;
+}
+
+#agenda .wrapper {
+    flex: 1;
+}
+
 .wrapper {
     background-color: skyblue;
     /* background-color: #ff7300d6; */
