drill tone update

--- a/cookbook/meal-prep/basic-css-drills/css/drill_page0.css
+++ b/cookbook/meal-prep/basic-css-drills/css/drill_page0.css
@@ -1,19 +1,17 @@
 /*
     This is another "drill set". To recap from last time,
-    students have 3-5 min (at your discretion) to complete
-    each individual drill, after which you share a 
-    solution for how to complete it; then move on to the
-    next one. I recommend debugging only after all drills
-    have been completed.
+    you will have 3-5 min to complete each individual drill, 
+    after which you should compare your solution to the one
+    in here; then move on to the next one. 
     
-    This time however, students will not be writing any
-    HTML; they'll only be writing CSS in this "drill.css" 
-    file to craft their solutions.
+    This time however, you will not be writing any
+    HTML; you'll only be writing CSS in this "drill.css" 
+    file to craft your solutions.
 
     Note that there is a separate CSS file for general
     styling and the creation of the drills called 
-    "style.css"; students shouldn't be modifying that, 
-    though they are free to examine it if they choose to.
+    "style.css"; you shouldn't be modifying that, 
+    though you are free to examine it if they choose to.
 */
 
 /* Drill 1 - Write your code solution below */
