--- a/cookbook/meal-prep/basic-css-drills/css/drill_page1.css
+++ b/cookbook/meal-prep/basic-css-drills/css/drill_page1.css
@@ -2,10 +2,10 @@
 
 /*
     This one is pretty straightforward; the 
-    challenge for them at this point is 
-    probably just learning to identify the
+    challenge for you at this point is 
+    basically just learning to identify the
     HTML element and id attribute, and then
-    targeting in CSS with the id selector.
+    targeting them in CSS with the id selector.
 */
 
 #d1-p1 {
