--- a/cookbook/meal-prep/basic-css-drills/css/drill_page13.css
+++ b/cookbook/meal-prep/basic-css-drills/css/drill_page13.css
@@ -8,9 +8,10 @@
     used combination of heading elements,
     without actually using heading elements.
 
-    This is a good thing to point out, that
+    This is a good thing to observe:
     if you want to make something look like a 
-    heading, you can change its appearance.
+    heading, you can do so by changing its
+    font-size and font-weight properties.
 
     On the flip side, if you don't like how
     a heading looks, you can change that too
