--- a/cookbook/meal-prep/basic-css-drills/css/drill_page3.css
+++ b/cookbook/meal-prep/basic-css-drills/css/drill_page3.css
@@ -2,9 +2,9 @@
 
 /*
     Similar challenge as Drill 2, but this
-    time they have to use separate colors.
+    time you have to use separate colors.
 
-    Because of this, they also can't share
+    Because of this, you also can't share
     the CSS properties with multiple elements
     in a single rule.
 */
