--- a/cookbook/meal-prep/basic-css-drills/css/drill_page5.css
+++ b/cookbook/meal-prep/basic-css-drills/css/drill_page5.css
@@ -1,7 +1,7 @@
 /* Drill 5 - Write your code solution below */
 
 /*
-    This one is more challenging, to show them
+    This one is more challenging, to show you
     how background-color works in parent/child
     relationships.
 
