--- a/cookbook/meal-prep/basic-css-drills/css/drill_page7.css
+++ b/cookbook/meal-prep/basic-css-drills/css/drill_page7.css
@@ -15,10 +15,9 @@
     not as condensed and more repetitive than
     the code above.
 
-    Encourage students to consolidate their
-    CSS rules whenever they have duplicated
-    CSS properties (though this may go over
-    their heads at this point).
+    Try to consolidate your CSS rules like we
+    did above whenever you have duplicated CSS 
+    properties like below.
 */
 
 #d7-s2 {
