--- a/cookbook/meal-prep/containers-selectors-drills/css/drill_page2.css
+++ b/cookbook/meal-prep/containers-selectors-drills/css/drill_page2.css
@@ -3,8 +3,7 @@
 /*
     Again, the CSS itself isn't that complex, 
     but the logic behind the CSS can be 
-    challenging for students to wrap their 
-    heads around.
+    challenging to wrap your head around.
 
     We're only targeting the paragraphs inside
     of the 'purple' class, so we have a space
