--- a/cookbook/meal-prep/containers-selectors-drills/css/drill_page5.css
+++ b/cookbook/meal-prep/containers-selectors-drills/css/drill_page5.css
@@ -6,7 +6,7 @@
     change the layout of the content inside 
     of them.
 
-    Other than that, just a refresher on
+    Other than that, it's just a refresher on
     how to use border-radius to completely
     round the corners.
 */
