--- a/cookbook/meal-prep/containers-selectors-drills/css/drill_page0.css
+++ b/cookbook/meal-prep/containers-selectors-drills/css/drill_page0.css
@@ -1,19 +1,12 @@
 /*
     These drills are a little more challenging,
-    as students will need to modify both the
+    as you will need to modify both the
     HTML and the CSS.
 
-    They're only supposed to add the specified
-    container elements and classes; they 
-    shouldn't be adding their own ids/classes
+    You're only supposed to add the specified
+    container elements and classes; you 
+    shouldn't be adding your own ids/classes
     to make them easier to target.
-
-    Because their attention will be split between
-    HTML and CSS in these drills, you may want
-    to consider increasing the amount of time
-    they have to work on them to 6 min each,
-    or at least be sure to give them the full
-    5 min per drill.
 */
 
 /* Drill 1 - Write your code solution below */
