drill comment updates

--- a/cookbook/meal-prep/box-model-border-drills/css/drill_page1.css
+++ b/cookbook/meal-prep/box-model-border-drills/css/drill_page1.css
@@ -1,7 +1,7 @@
 /* Drill 1 - Write your code solution below */
 
 /*
-    Very basic, just making sure they remember
+    Very basic, just making sure you remember
     how to create a border in the first place.
 */
 
