--- a/cookbook/meal-prep/box-model-border-drills/css/drill_page2.css
+++ b/cookbook/meal-prep/box-model-border-drills/css/drill_page2.css
@@ -1,7 +1,7 @@
 /* Drill 2 - Write your code solution below */
 
 /*
-    Now we're checking to see if they remember
+    Now we're checking to see if you remember
     how to use the different border styles.
 */
 
