--- a/cookbook/meal-prep/box-model-border-drills/css/drill_page3.css
+++ b/cookbook/meal-prep/box-model-border-drills/css/drill_page3.css
@@ -6,7 +6,7 @@
     side in order to replicate something like
     a horizontal rule (<hr>) element.
 
-    This should hopefully make them think back
+    This should hopefully make you think back
     to the Wiki Page assignments, where they had
     to use <hr> elements under the headings,
     which didn't look quite the same as the
