--- a/cookbook/meal-prep/box-model-border-drills/css/drill_page5.css
+++ b/cookbook/meal-prep/box-model-border-drills/css/drill_page5.css
@@ -5,8 +5,8 @@
     can be applied to inline-block elements
     as well.
 
-    But, they also need to apply border-radius
-    this time, so we're also seeing if they
+    But, you also need to apply border-radius
+    this time, so we're also seeing if you
     remember how to use that property.
 */
 
