--- a/cookbook/meal-prep/box-model-border-drills/css/drill_page6.css
+++ b/cookbook/meal-prep/box-model-border-drills/css/drill_page6.css
@@ -1,12 +1,12 @@
 /* Drill 6 - Write your code solution below */
 
 /*
-    Most of the set up is done for them here,
-    so they're really just doing the same
+    Most of the set up is done for you here,
+    so you're really just doing the same
     thing as in the previous drill.
 
-    But this time, they're doing it twice,
-    and they also need to show they know
+    But this time, you're doing it twice,
+    and you also need to show you know
     how to apply different corner radii.
 
     Again, not too complex, but with just
