--- a/cookbook/meal-prep/box-model-border-drills/css/drill_page7.css
+++ b/cookbook/meal-prep/box-model-border-drills/css/drill_page7.css
@@ -3,7 +3,7 @@
 /*
     This one has an even more complicated setup
     behind the scenes, but the goal is just
-    for them to focus on border-radius,
+    for you to focus on border-radius,
     showing that they can use it on images as well
     to reshape them in interesting visual ways.
 */
