--- a/cookbook/meal-prep/box-model-margin-drills/css/drill_page0.css
+++ b/cookbook/meal-prep/box-model-margin-drills/css/drill_page0.css
@@ -2,8 +2,8 @@
     Here's another drill set, this time focusing
     on the margin property of the Box Model.
 
-    In general, since students seem to struggle
-    with understanding container in HTML/CSS, 
+    In general, since students often struggle
+    with understanding containers in HTML/CSS, 
     this drill set focuses on starting with
     boxes (which are more easily identifiable 
     with containers), before moving on to text,
