--- a/cookbook/meal-prep/box-model-margin-drills/css/drill_page1.css
+++ b/cookbook/meal-prep/box-model-margin-drills/css/drill_page1.css
@@ -5,7 +5,7 @@
     margin of the top div to push away the div
     below it.
 
-    Remind the students to think of margin as
+    Remember to think of margin as
     "personal space" between elements.
 */
 
