--- a/cookbook/meal-prep/box-model-margin-drills/css/drill_page7.css
+++ b/cookbook/meal-prep/box-model-margin-drills/css/drill_page7.css
@@ -3,7 +3,7 @@
 /*
     Now we're getting a little more practical.
 
-    They have to align the content in the center,
+    You have to align the content in the center,
     and also add different margins to the top/bottom
     and left/right sides.
 
