--- a/cookbook/meal-prep/box-model-padding-drills/css/drill_page0.css
+++ b/cookbook/meal-prep/box-model-padding-drills/css/drill_page0.css
@@ -2,7 +2,7 @@
     This drill set focuses on the padding
     property of the Box Model.
 
-    Remind students that padding is like
+    Remember that padding is like
     "bubblewrap" (or other packing materials)
     used to protect or pad the contents
     inside a shipping container.
