--- a/cookbook/meal-prep/box-model-padding-drills/css/drill_page1.css
+++ b/cookbook/meal-prep/box-model-padding-drills/css/drill_page1.css
@@ -3,7 +3,7 @@
 /*
     Starting things out simply: the two divs
     are already set up with borders and
-    background-colors, they just need to add
+    background-colors, you just need to add
     padding to the OUTER div to add more
     cushion for the INNER div.
 */
