drill comment updates

--- a/cookbook/meal-prep/single-column-layouts-drills/css/drill_page0.css
+++ b/cookbook/meal-prep/single-column-layouts-drills/css/drill_page0.css
@@ -9,7 +9,7 @@
     or both of its margin sides.
 
     Pretty straightforward, but still may 
-    trip up some students without practice,
+    trip you up without practice,
     which is why we're doing these drills.
 */
 
