--- a/cookbook/meal-prep/single-column-layouts-drills/css/drill_page1.css
+++ b/cookbook/meal-prep/single-column-layouts-drills/css/drill_page1.css
@@ -9,7 +9,7 @@
     The only thing we need to do here is set
     the container width.
 
-    Students can choose to use absolute or relative
+    You can choose to use absolute or relative
     units for the width (either around 300px or 50%).
 */
 
