--- a/cookbook/meal-prep/single-column-layouts-drills/css/drill_page3.css
+++ b/cookbook/meal-prep/single-column-layouts-drills/css/drill_page3.css
@@ -16,11 +16,11 @@
     the element.
 
     This is one of the most common layout
-    implementations, so try to reinforce
+    implementations, so take note of
     how important it is, but also how
     simple it is.
 
-    The main variation students will see
+    The main variation you will see
     out in the wild is the width: some
     sites have very wide widths, and some
     have smaller, more flexible widths.
