--- a/cookbook/meal-prep/single-column-layouts-drills/css/drill_page4.css
+++ b/cookbook/meal-prep/single-column-layouts-drills/css/drill_page4.css
@@ -9,7 +9,7 @@
     or not, this approach can be used to center
     content in a column.
 
-    Sometimes students get tripped up by 
+    Sometimes you can get tripped up by 
     different content or styling, so hopefully
     this example helps shed some light that the
     exact same code works regardless (as long 
