--- a/cookbook/meal-prep/one-column-layouts/css/page1.css
+++ b/cookbook/meal-prep/one-column-layouts/css/page1.css
@@ -1,6 +1,6 @@
 /*
     First off, we're going to demo some important 
-    properties that students will likely want to 
+    properties that you will want to 
     set up for EVERY page layout going forward.
 */
 
@@ -12,7 +12,7 @@
     The box-sizing: border-box; property changes the
     way that elements determine their sizes on the page.
     We've touched on this property before in previous 
-    drills/demos, but a refresher won't hurt anyone.
+    drills/demos, but a refresher won't hurt.
 
     The default is set to 'content-box', which means when
     we set a width of 500px on something, only the content
