--- a/cookbook/meal-prep/single-column-layouts-drills/css/drill_page5.css
+++ b/cookbook/meal-prep/single-column-layouts-drills/css/drill_page5.css
@@ -4,7 +4,7 @@
     Now we're just applying all three approaches
     in one drill to different containers.
 
-    Assuming students understand the solutions
+    Assuming you understand the solutions
     to the previous drills, the only tricky 
     part is making sure you're selecting and
     applying code to the right elements.
