--- a/cookbook/meal-prep/flexbox-drills/css/drill_page0.css
+++ b/cookbook/meal-prep/flexbox-drills/css/drill_page0.css
@@ -14,11 +14,11 @@
     terminology).
 
     So as you go through these and provide the
-    solutions, be sure to point our which
+    solutions, be sure to take notice of which
     elements are containers and which are items.
 
     There are only a few properties (and values) 
-    that students need to know here to succeed.
+    that you need to know here to succeed.
 
     Feel free to review them before starting.
 
