--- a/cookbook/meal-prep/flexbox-drills/css/drill_page1.css
+++ b/cookbook/meal-prep/flexbox-drills/css/drill_page1.css
@@ -1,7 +1,7 @@
 /* Drill 1 - Write your code solution below */
 
 /* 
-    This drill is VERY straightforward; they
+    This drill is VERY straightforward; you
     just need to be able to identify which
     element is the container, target it,
     and then activate flexbox on it.
