--- a/cookbook/meal-prep/flexbox-drills/css/drill_page3.css
+++ b/cookbook/meal-prep/flexbox-drills/css/drill_page3.css
@@ -4,9 +4,9 @@
     Growing more complex by tiny steps.
 
     First (after targeting the correct container),
-    they need to activate flexbox.
+    you need to activate flexbox.
 
-    Then, they need to use flex-direction to 
+    Then, you need to use flex-direction to 
     change the default direction (row) to
     column instead.
 */
