--- a/showcase/css/blog-with-sidebar.css
+++ b/showcase/css/blog-with-sidebar.css
@@ -5,7 +5,7 @@
     border: 3px solid #666666;
     background: 
         radial-gradient(#00000011, #00000088),
-        url("../images/bookshelves_trimmed.jpg");
+        url("../images/monitors_trimmed.jpg");
     background-size: contain;
 }
 
@@ -15,7 +15,7 @@
             #00000088,
             #00000022
         ),
-        url("../images/marbleflooring_trimmed.jpg") top left / 100px;
+        url("../images/polished-concrete.jpg") top left / 100px;
     transform: 
         rotateX(90deg);
 }
@@ -26,9 +26,9 @@
 }
 
 .showcaseFrame {
-    border-style: ridge;
-    border-color: #230f04;
-    background-color: antiquewhite;
+    border-style: solid;
+    border-color: #333333;
+    background-color: rgb(0, 25, 31);
     width: 50%;
     display: inline-block;
 }
@@ -43,6 +43,7 @@
 .caption {
     line-height: 10px;
     border-style: ridge;
+    border-color: #230f04;
     padding: 4px 4px 6px;
 }
 
